--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.202",
-    "css-loader": "^6.10.0",
-    "csv-loader": "^3.0.5",
-    "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "xml-loader": "^1.2.1"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "lodash": "^4.17.21"
