--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
