--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.5.1"
   }
 }
