--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
     "allowJs": true,
+    "module": "ES6",
     "target": "ES5"
   },
   "include": ["./src/**/*"]
