--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "fetcher",
-  "version": "1.0.0",
-  "description": "",
-  "private": "true",
+  "name": "gaoridang-monorepo",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "lint": "turbo run lint",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.{js,jsx,ts,tsx,md}\"",
+    "changeset-create": "changeset",
+    "changeset-apply": "changeset version",
+    "release": "turbo run build && changeset publish"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.202",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^3.3.4",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.5.1"
+    "@changesets/cli": "2.22.0",
+    "eslint": "8.15.0",
+    "eslint-config-gaoridang": "*",
+    "prettier": "2.5.1",
+    "turbo": "1.2.12"
   }
 }
