--- a/turbo.json
+++ b/turbo.json
@@ -9,13 +9,14 @@
       "outputs": ["coverage/**"],
       "dependsOn": []
     },
-    "lint": {
-      "outputs": []
-    },
+    "lint": {},
     "dev": {
       "cache": false
     },
     "clean": {
+      "cache": false
+    },
+    "start": {
       "cache": false
     }
   }
