--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,13 +16,14 @@
   },
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "eslint-config-gaoridang": "*",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
+    "ts-config-gaoridang": "*",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0",
-    "eslint-config-gaoridang": "*",
-    "ts-config-gaoridang": "*"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
