--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   ],
   "scripts": {
     "build": "turbo run build",
+    "start": "turbo run start",
+    "start:client": "turbo run start --filter=\"client\"",
+    "start:server": "turbo run start --filter=@gaoridang/server",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
@@ -20,6 +23,6 @@
     "eslint": "8.15.0",
     "eslint-config-gaoridang": "*",
     "prettier": "2.5.1",
-    "turbo": "1.2.12"
+    "turbo": "^1.12.2"
   }
 }
